Alignment issue fixed

--- a/assets/sass/components/_game-lobby-lottery.scss
+++ b/assets/sass/components/_game-lobby-lottery.scss
@@ -2,25 +2,26 @@
     .lottery-lobby-tile-container {
         padding-top: 1%;
 
-        .game-tiles {
-            width:100%;
+        ul {
+            padding: 0 0.5%;
+            margin: 0;
 
-            .game-lottery-lobby-container {
-                padding: 0;
-                padding-right: 1%;
+            li {
+                padding: 0 0.5% 1% 0.5%;
             }
         }
+
     }
 
     .game-listing {
-        position: relative;
-        float: left;
-        padding: 0 0 1% 1%;
-
         &-item {
             padding: 0;
             display: block;
             float: none;
+
+            img {
+                height: 15rem;
+            }
         }
 
         a {
@@ -34,29 +35,41 @@
             padding: 0 1%;
         }
 
-        .lottery-tile-maintenance {
-            &-title {
-                position: absolute;
-                text-align: center;
-                width: 100%;
-                color: $white;
-                z-index: 1;
-            }
+    }
 
-            p {
-                position: absolute;
-                top: 45%;
-                left: 1.5%;
-                right: 1.5%;
-                z-index: 1;
-                color: #fff;
-                text-align: center;
-                font-size: 1.6rem;
-                font-weight: 600;
-                width: 100%;
-                line-height: initial;
-            }
+    .lottery-tile-maintenance {
+        &-title {
+            position: absolute;
+            text-align: center;
+            width: 100%;
+            color: $white;
+            z-index: 1;
         }
+
+        p {
+            position: absolute;
+            top: 45%;
+            left: 1.5%;
+            right: 1.5%;
+            z-index: 1;
+            color: #fff;
+            text-align: center;
+            font-size: 1.6rem;
+            font-weight: 600;
+            width: 100%;
+            line-height: initial;
+        }
+    }
+
+    .lottery-tile-maintenance:after {
+        position: absolute;
+        z-index: 0;
+        content: " ";
+        background: #000;
+        opacity: 0.8;
+        top: 0;
+        height: 95.666667%;
+        width: 98.5%;
     }
 
     .game-ribbon {
@@ -80,16 +93,13 @@
 @media (orientation: portrait) {
     .mobile-lottery {
         #game-container {
-            .small-image {
-                width: 50%;
-            }
-
-            .large-image {
-                width: 100%;
-            }
+            .game-tiles.large-override,
+            .game-tiles.col-4 {
+                    width: 50%;
+                }
         }
 
-        .small-image {
+        .col-4 {
             .lottery-tile-maintenance:after {
                 position: absolute;
                 z-index: 0;
@@ -102,7 +112,7 @@
             }
         }
 
-        .large-image {
+        .col-12 {
             .lottery-tile-maintenance:after {
                 position: absolute;
                 z-index: 0;
@@ -116,56 +126,6 @@
         }
     }
 }
-
-// Landscape
-@media (orientation: landscape) {
-    .mobile-lottery {
-        #game-container {
-            .small-image {
-                width: 33.13333333333333%;
-            }
-
-            .small-image.large-override {
-                width: 66.86666667%;
-            }
-
-            .large-image {
-                width: 66.86666667%;
-            }
-
-            .large-image.small-override {
-                width: 33.13333333333333%;
-            }
-        }
-
-        .small-image {
-            .lottery-tile-maintenance:after {
-                position: absolute;
-                z-index: 0;
-                content: " ";
-                background: #000;
-                opacity: 0.8;
-                top: 0;
-                height: 96.66666667%;
-                width: 97%;
-            }
-        }
-
-        .large-image {
-            .lottery-tile-maintenance:after {
-                position: absolute;
-                z-index: 0;
-                content: " ";
-                background: #000;
-                opacity: 0.8;
-                top: 0;
-                height: 96.66666667%;
-                width: 98.5%;
-            }
-        }
-    }
-}
-
 
 // Lottery Inner Page
 .node-inner-page {
